objects/RMA_Business_Category_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Category__c</fullName>
        <label>Business Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>RMA Business Category Setting</label>
    <pluralLabel>RMA Business Category Settings</pluralLabel>
</CustomObject>